# FREE-AI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ai.md  config.ini  default.natstepfilter  launch.vs.json  start_test.cmd
include/crypto/: Identity.hpp
include/inference/: ContextBuilder.hpp  InferenceEngine.hpp  LlamaContext.hpp  MemoryManager.hpp  ModelConfig.hpp
include/network/: DHT.hpp  HolePunchManager.hpp  ISocket.hpp  NetworkInit.hpp  PacketSecurity.hpp  PeerConnectionTracker.hpp  PeerManager.hpp  Protocol.hpp  STUNParser.hpp  Socket.hpp  UDPSocket.hpp
include/utils/: Config.hpp  Helpers.hpp  ThreadUtils.hpp  TimeUtils.hpp
info/: chat-LLM Parameter Distribution (1).txt  chat-LLM Parameter Distribution (2).txt  chat-LLM Parameter Distribution (3).txt  chat-LLM Parameter Distribution (4).txt  chat-LLM Parameter Distribution (5).txt  chat-LLM Parameter Distribution (6).txt  chat-LLM Parameter Distribution.json  chat-LLM Parameter Distribution.txt  chat-export-1774020513060.json  chat-export-1774040810676.json  chat-export-1774096330583.json  chat-export-1774124585450.json  chat-export-1774206994882.json  chat-export-1774292873263.json  config.ini  config2.ini  config3.ini
plans/: comma-separated-statements-implementation.md  context-builder-refactoring-plan.md  context-builder-refactoring-remaining.md  memory-compression-system-v2.md  memory-compression-system.md  udp-hole-punching-review.md
src/: main.cpp
src/crypto/: Identity.cpp
src/inference/: ContextBuilder.cpp  InferenceEngine.cpp  LlamaContext.cpp  MemoryManager.cpp  ModelConfig.cpp
src/network/: DHT.cpp  HolePunchManager.cpp  NetworkInit.cpp  PacketSecurity.cpp  PeerConnectionTracker.cpp  PeerManager.cpp  STUNParser.cpp  Socket.cpp  UDPSocket.cpp  config.ini
src/utils/: Config.cpp  Helpers.cpp
tests/: test_main.cpp
